# holo-rea

./: .gitignore  README.md  config.nix  package.json
_templates/init-zome/mixin-zome-libs/: defs_Cargo.toml.t  lib_Cargo.toml.t  rpc_Cargo.toml.t  storage_Cargo.toml.t
_templates/init-zome/new-zome/: zome_Cargo.toml.t
apps/holorea-graphql-explorer/: package.json
apps/kanban-task-board/: package.json
lib/hdk_graph_helpers/: Cargo.toml
lib/rea_agent/defs/: Cargo.toml
lib/rea_agent/lib/: Cargo.toml
lib/rea_agent/rpc/: Cargo.toml
lib/rea_agent/storage/: Cargo.toml
lib/rea_commitment/defs/: Cargo.toml
lib/rea_commitment/lib/: Cargo.toml
lib/rea_commitment/rpc/: Cargo.toml
lib/rea_commitment/storage/: Cargo.toml
lib/rea_economic_event/defs/: Cargo.toml
lib/rea_economic_event/lib/: Cargo.toml
lib/rea_economic_event/rpc/: Cargo.toml
lib/rea_economic_resource/defs/: Cargo.toml
lib/rea_economic_resource/lib/: Cargo.toml
lib/rea_economic_resource/rpc/: Cargo.toml
lib/rea_economic_resource/storage/: Cargo.toml
lib/rea_fulfillment/defs/: Cargo.toml
lib/rea_fulfillment/lib/: Cargo.toml
lib/rea_fulfillment/lib_destination/: Cargo.toml
lib/rea_fulfillment/lib_origin/: Cargo.toml
lib/rea_fulfillment/rpc/: Cargo.toml
lib/rea_fulfillment/storage/: Cargo.toml
lib/rea_intent/defs/: Cargo.toml
lib/rea_intent/lib/: Cargo.toml
lib/rea_intent/rpc/: Cargo.toml
lib/rea_intent/storage/: Cargo.toml
lib/vf_actions/: Cargo.toml
lib/vf_core/: Cargo.toml
modules/vf-graphql-holochain/: README.md
scripts/: postinstall.sh
test/: package.json
(+58 files in other folders)
