[package]
name = "hc_zome_rea_agent_lib"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
# :DUPE: hdk-rust-revid
hdk = "=0.0.47-alpha1"

hdk_graph_helpers = { path = "../../hdk_graph_helpers" }
hc_zome_rea_agent_storage_consts = { path = "../storage_consts" }
hc_zome_rea_agent_storage = { path = "../storage" }
hc_zome_rea_agent_rpc = { path = "../rpc" }
hc_zome_TODO_storage_consts = { path = "../../TODO/storage_consts" }

[lib]
crate-type = ["lib"]
